--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "a-woocommerce-dev-helper",
-	"version": "0.7.1-dev",
+	"version": "0.8.0",
 	"author": "SkyVerge Team",
 	"homepage": "http://www.skyverge.com",
 	"repository": {
