Add FW and move to PHP 5.3

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
+# IDE
 /.idea
 *.zip
 .DS_Store
 
+# Composer
+/vendor
+composer.lock
+
 # NPM packages used by Grunt.js
 /node_modules
+package-lock.json
 
 # NPM debug log
 npm-debug.log
