--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
 	"name": "a-woocommerce-dev-helper",
-	"version": "0.8.1",
 	"author": "SkyVerge Team",
 	"homepage": "http://www.skyverge.com",
 	"repository": {
@@ -15,12 +14,23 @@
 	},
 	"devDependencies": {
 		"grunt": "~0.4.5",
+		"grunt-contrib-clean": "~0.6.0",
+		"grunt-contrib-coffee": "~0.13.0",
+		"grunt-contrib-compress": "~1.3.0",
+		"grunt-contrib-copy": "~0.8.0",
+		"grunt-contrib-uglify": "~0.9.1",
+		"grunt-contrib-watch": "~0.6.1",
+		"grunt-exec": "~1.0.0",
 		"grunt-newer": "~1.1.1",
 		"grunt-notify": "~0.4.1",
+		"grunt-sass": "^2.0.0",
+		"grunt-wp-deploy": "~1.2.1",
 		"grunt-wp-i18n": "~0.5.2",
 		"load-grunt-tasks": "~3.2.0",
+		"sake": "github:skyverge/sake",
 		"time-grunt": "~1.2.1",
 		"underscore": "~1.8.3",
 		"underscore.string": "~3.1.1"
-	}
+	},
+	"dependencies": {}
 }
