--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
 	"engines": {
 		"node": ">= 0.10.0"
 	},
+	"scripts": {
+		"start": "wp-scripts start",
+		"build": "wp-scripts build"
+	},
 	"devDependencies": {
+		"@woocommerce/dependency-extraction-webpack-plugin": "^2.2.0",
+		"@wordpress/scripts": "^26.12.0",
 		"grunt": "~1.3.0",
 		"grunt-newer": "~1.1.1",
 		"grunt-notify": "~0.4.1",
