--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
 		"time-grunt": "~1.2.1",
 		"underscore": "~1.8.3",
 		"underscore.string": "~3.1.1"
+	},
+	"dependencies": {
+		"wordpress-components": "npm:@wordpress/components@^25.7.0"
 	}
 }
